ex1.output
State 26 conflicts: 1 shift/reduce
State 31 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier ExtDecList
    6       | Specifier SEMI
    7       | Specifier
    8       | Specifier FunDec CompSt
    9       | error SEMI

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | error RP

   66 Args: Exp COMMA Args
   67     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 9 28 37 41 65
INT (258) 20 63
FLOAT (259) 64
ID (260) 16 18 19 21 22 23 57 58 59 61 62
TYPE (261) 12
LOWER_THAN_SEMI (262)
SEMI (263) 4 6 9 31 33 37 40 41
COMMA (264) 11 24 43 66
LC (265) 14 27
RC (266) 14 27 28
LOWER_THAN_ELSE (267)
STRUCT (268) 14 15
RETURN (269) 33
IF (270) 34 35
ELSE (271) 35
WHILE (272) 36
ASSIGNOP (273) 45 46
OR (274) 48
AND (275) 47
RELOP (276) 49
PLUS (277) 50
MINUS (278) 51 55
STAR (279) 52
DIV (280) 53
NOT (281) 56
UMINUS (282)
DOT (283) 61
LP (284) 21 22 23 34 35 36 54 57 58 59
RP (285) 21 22 34 35 36 54 57 59 65
LB (286) 20 60
RB (287) 20 60


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1, on right: 0
ExtDefList (35)
    on left: 2 3, on right: 1 2
ExtDef (36)
    on left: 4 5 6 7 8 9, on right: 2
ExtDecList (37)
    on left: 10 11, on right: 4 5 11
Specifier (38)
    on left: 12 13, on right: 4 5 6 7 8 26 40
StructSpecifier (39)
    on left: 14 15, on right: 13
OptTag (40)
    on left: 16 17, on right: 14
Tag (41)
    on left: 18, on right: 15
VarDec (42)
    on left: 19 20, on right: 10 11 20 26 44 45
FunDec (43)
    on left: 21 22 23, on right: 8
VarList (44)
    on left: 24 25, on right: 21 24
ParamDec (45)
    on left: 26, on right: 24 25
CompSt (46)
    on left: 27 28, on right: 8 32
StmtList (47)
    on left: 29 30, on right: 27 29
Stmt (48)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (49)
    on left: 38 39, on right: 14 27 38
Def (50)
    on left: 40 41, on right: 38
DecList (51)
    on left: 42 43, on right: 40 43
Dec (52)
    on left: 44 45, on right: 42 43
Exp (53)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64 65, on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55
    56 60 61 66 67
Args (54)
    on left: 66 67, on right: 57 66


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    9 ExtDef: error . SEMI

    SEMI  shift, and go to state 9


State 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 3

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 10

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 11
    Tag     go to state 12


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 13


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 14
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . ExtDecList
    6       | Specifier . SEMI
    7       | Specifier .
    8       | Specifier . FunDec CompSt

    ID    shift, and go to state 15
    SEMI  shift, and go to state 16

    $default  reduce using rule 7 (ExtDef)

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 9

    9 ExtDef: error SEMI .

    $default  reduce using rule 9 (ExtDef)


State 10

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 11

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 20


State 12

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


State 13

    0 $accept: Program $end .

    $default  accept


State 14

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 15

   19 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP

    LP  shift, and go to state 21

    $default  reduce using rule 19 (VarDec)


State 16

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI
    5       | Specifier ExtDecList .

    SEMI  shift, and go to state 22

    $default  reduce using rule 5 (ExtDef)


State 18

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 10 (ExtDecList)


State 19

    8 ExtDef: Specifier FunDec . CompSt

    error  shift, and go to state 25
    LC     shift, and go to state 26

    CompSt  go to state 27


State 20

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 30
    Def              go to state 31


State 21

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP .

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3
    RP      shift, and go to state 32

    $default  reduce using rule 23 (FunDec)

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 23

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 36

    ExtDecList  go to state 37
    VarDec      go to state 18


State 24

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 38


State 25

   28 CompSt: error . RC

    RC  shift, and go to state 39


State 26

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 31


State 27

    8 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 8 (ExtDef)


State 28

   41 Def: error . SEMI

    SEMI  shift, and go to state 41


State 29

   40 Def: Specifier . DecList SEMI

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 30

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 31

   38 DefList: Def . DefList

    error   shift, and go to state 28
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 39 (DefList)]
    INT     reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)

    Specifier        go to state 29
    StructSpecifier  go to state 8
    DefList          go to state 46
    Def              go to state 31


State 32

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 36

    VarDec  go to state 47


State 34

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 48


State 35

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 49

    $default  reduce using rule 25 (VarList)


State 36

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 37

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


State 38

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 50


State 39

   28 CompSt: error RC .

    $default  reduce using rule 28 (CompSt)


State 40

   27 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    LC      shift, and go to state 26
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 41

   41 Def: error SEMI .

    $default  reduce using rule 41 (Def)


State 42

   20 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 65
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


State 43

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 66


State 44

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 42 (DecList)


State 45

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 46

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 47

   20 VarDec: VarDec . LB INT RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 26 (ParamDec)


State 48

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 49

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 33
    StructSpecifier  go to state 8
    VarList          go to state 68
    ParamDec         go to state 35


State 50

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 51

   28 CompSt: error . RC
   37 Stmt: error . SEMI
   65 Exp: error . RP

    SEMI  shift, and go to state 69
    RC    shift, and go to state 39
    RP    shift, and go to state 70


State 52

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 53

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 54

   57 Exp: ID . LP Args RP
   58    | ID . LP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 71

    $default  reduce using rule 62 (Exp)


State 55

   33 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 73


State 56

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 74


State 57

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 75


State 58

   55 Exp: MINUS . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 76


State 59

   56 Exp: NOT . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 77


State 60

   54 Exp: LP . Exp RP

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 78


State 61

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 62

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 79


State 63

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 51
    INT     shift, and go to state 52
    FLOAT   shift, and go to state 53
    ID      shift, and go to state 54
    LC      shift, and go to state 26
    RETURN  shift, and go to state 55
    IF      shift, and go to state 56
    WHILE   shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 80
    Stmt      go to state 63
    Exp       go to state 64


State 64

   31 Stmt: Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 81
    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 65

   45 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 92


State 66

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 67

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 36

    VarDec   go to state 42
    DecList  go to state 93
    Dec      go to state 44


State 68

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 69

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 70

   65 Exp: error RP .

    $default  reduce using rule 65 (Exp)


State 71

   57 Exp: ID LP . Args RP
   58    | ID LP .
   59    | ID LP . RP

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 94

    SEMI      reduce using rule 58 (Exp)
    COMMA     reduce using rule 58 (Exp)
    ASSIGNOP  reduce using rule 58 (Exp)
    OR        reduce using rule 58 (Exp)
    AND       reduce using rule 58 (Exp)
    RELOP     reduce using rule 58 (Exp)
    PLUS      reduce using rule 58 (Exp)
    STAR      reduce using rule 58 (Exp)
    DIV       reduce using rule 58 (Exp)
    DOT       reduce using rule 58 (Exp)
    LB        reduce using rule 58 (Exp)
    RB        reduce using rule 58 (Exp)

    Exp   go to state 95
    Args  go to state 96


State 72

   65 Exp: error . RP

    RP  shift, and go to state 70


State 73

   33 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    SEMI      shift, and go to state 97
    ASSIGNOP  shift, and go to state 82
    OR        shift, and go to state 83
    AND       shift, and go to state 84
    RELOP     shift, and go to state 85
    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 90
    LB        shift, and go to state 91


State 74

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 98


State 75

   36 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 72
    INT    shift, and go to state 52
    FLOAT  shift, and go to state 53
    ID     shift, and go to state 54
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 99


State 76

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   55    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 55 (Exp)


State 77

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   56    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID

    DOT  shift, and go to state 90
    LB   shift, and go to state 91

    $default  reduce using rule 56 (Exp)


State 78

   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   54    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
